--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 # Trabajo bucles JS
 
-Este proyecto contiene un script en JavaScript que solicita una cadena de texto al usuario y muestra la posición de la primera vocal en el texto.
+Este proyecto contiene un script en JavaScript que solicita ejercicios que contengan bucles.
 
 ## Tecnologías Usadas
 
